# Computer-vision

./: README.md  pyproject.toml
balls/: README.md  main.py
chain_algorithm/: README.md  main.py
count_object_on_camera/: main.py
counting_objects/: README.md  main.py
frame_detection/: README.md  main.py
frequency_dictionary_of_symbols/: README.md  main.py
linear_gradient/: Makefile  README.md  main.py
motion/: Circle.py  README.md  main.py
pencils/: README.md  main.py
python_numpy/determine_offset/: README.md  main.py
python_numpy/nominal_resolution/: README.md  main.py
remote_stars/: README.md  filter_otsu.py  main.py
shades_and_shapes/: README.md  main.py
stars/: README.md  main.py
wires/: README.md  main.py
